# galopy

./: .gitignore  .travis.yml  LICENSE  README.md  environment.yml  galo.py  setup.cfg
.github/workflows/: python-package-conda.yml
examples/: cx.py  cz.py  cz2.py  gd_correction.py  gd_multimeasure.py  gd_multisearch.py  gradient_descent.py  hyperparameters.py  main.py  nsx.py  qft3.py  qft4.py  result  test.py  tests_arb.py  tests_lonet.py  tests_lonet_2.py
galopy/: __init__.py  circuit.py  circuit_search.py  data_processing.py  genetic_algorithm.py  gpu.py  lonet.py  nsx_search.py  population.py  population_old.py  population_type.py  progress_bar.py  random_population.py  topology.py
galopy/gd/: __init__.py  circuit_search.py  correction_circuit_search.py  lonet.py  multicircuit_search.py  topology.py
tests/: test_build_normalization_matrix.py  test_build_permutation_matrix.py  test_calculate_state.py  test_construct_input_state.py  test_construct_output_state.py  test_construct_state.py  test_normalize_coeffs.py  test_read_scheme_unitary.py  utils.py
