[metadata]
name = galopy
description = Implementation of genetic algorithm for linear optics quantum gates search
long_description_content_type = text/markdown
url = https://github.com/sysoevss/galopy
project_urls =
    Bug Tracker = https://github.com/sysoevss/galopy/issues
    Changelog = https://github.com/sysoevss/galopy/releases
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir =
    = galopy
packages = find:
python_requires = >=3.6

[options.packages.find]
where = galopy

[options.entry_points]
console_scripts =
    galopy = galopy.app:entry_point
